--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,8 +13,9 @@ message(STATUS "Catch2: ${Catch2_SOURCE_DIR}")
 list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 
 add_executable(tests
-    src/main.cpp
     src/buffer.cpp
+    src/encoding.cpp
+    src/main.cpp
 )
 
 set_target_properties(tests PROPERTIES CXX_STANDARD 20)
