--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ FetchContent_MakeAvailable(shp)
 add_executable(cbor_tests
     src/buffer.cpp
 
+    src/encoding/array.cpp
     src/encoding/custom_encode.cpp
     src/encoding/float.cpp
     src/encoding/misc.cpp
