Boxed types + explicit white-listing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(cbor_tests
     src/buffer.cpp
 
     src/encoding/array.cpp
+    src/encoding/boxed.cpp
     src/encoding/custom_encode.cpp
     src/encoding/float.cpp
     src/encoding/misc.cpp
