Decoding: head and unsigned types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ endif()
 # --- Actual library --- #
 add_library(cbor
     src/buffer.cpp
+    src/decoding.cpp
     src/encoding.cpp
     src/error.cpp
 )
