--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(cbor_tests
     src/decoding/floats.cpp
     src/decoding/head.cpp
     src/decoding/integers.cpp
+    src/decoding/reflection.cpp
     src/decoding/simple_types.cpp
     src/decoding/strings.cpp
     src/decoding/variant.cpp
