--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,6 +3,7 @@ project(cbor_example)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Fetch the CBOR library
 include(FetchContent)
 FetchContent_Declare(
     cbor
@@ -10,6 +11,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(cbor)
 
+# Also fetch the Simple Hex Printer Library for easier printing (not required).
 FetchContent_Declare(
     shp
     GIT_REPOSITORY https://github.com/yowidin/simple-hex-printer
@@ -17,5 +19,14 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(shp)
 
-add_executable(example main.cpp)
-target_link_libraries(example PRIVATE CBOR::library SimpleHexPrinter::library)
+# Gather all dependencies
+add_library(dependencies INTERFACE)
+target_link_libraries(dependencies INTERFACE CBOR::library SimpleHexPrinter::library)
+
+# Add client-server example
+add_executable(client-server client-server.cpp)
+target_link_libraries(client-server PRIVATE dependencies)
+
+# Add simple example
+add_executable(simple simple.cpp)
+target_link_libraries(simple PRIVATE dependencies)
